# rust-jobs-scrapper

./: .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile
output-healthcare/: 05014390-9c80-4055-8627-670e432201b1.json  37e27ee2-8a7a-4653-b09d-06fb19a1bec9.json  c0dc250b-2304-45bd-b914-5451527d7f8e.json  c7177728-11ad-48a4-8df7-c294287c34b1.json  d968e1ba-67bf-4a70-bef4-f3ffe77620aa.json  ec04ac47-2a85-4b40-b185-bd28762aa499.json  f92b9587-e4d4-4629-8a1b-55801cd54898.json  ff25c57f-6b0a-4015-9a32-a9e913f97cd9.json
src/: cli.rs  first_navigates.rs  gs_client.rs  job_entity.rs  job_page.rs  main.rs  openings_navigate.rs  utils.rs
