[package]
name = "fantoccini-test"
version = "0.1.0"
authors = ["André Claudino <claudino@d2x.com.br>"]
edition = "2018"

[dependencies]
fantoccini = "0.17.3"
url = "2.2.1"
async-recursion = "0.3.2"
rand = "0.8.3"
structopt = "0.3"

uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features=["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }